--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -61,7 +61,7 @@
             <div style="text-align: left; padding-left: 20px; color: black; font-size: 12px; display: flex; align-items: center;">
               <div>
                 <div style="margin-bottom: 5px;">{{item.name}}</div>
-                <div>{{item.price}}</div>
+                <div>Rp.{{setPrice(item.price)}}</div>
               </div>
               <div style="margin-left: 15px;">
                  <img style="width: 20px; height: 20px;" src='https://www.shareicon.net/data/2015/12/12/686167_heart_512x512.png'/>
