--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,9 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Three
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content></ion-content>
+<ion-content color="tertiary">
+  <div style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center;">
+    <h1 style="color: black; font-weight: bold;">Coming Soon</h1>
+  </div>
+</ion-content>
