--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,12 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: grey;
+  --ion-color-primary: black;
   --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: grey;
+  --ion-color-primary-contrast: black;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: grey;
-  --ion-color-primary-tint: grey;
+  --ion-color-primary-shade: black;
+  --ion-color-primary-tint: black;
 
   /** secondary **/
   --ion-color-secondary: #36342f;
