--- a/src/app/product-modal/product-modal.page.html
+++ b/src/app/product-modal/product-modal.page.html
@@ -192,7 +192,7 @@
     </div>
 
     <div>
-      <ion-button class="submit-btn" shape="round" color="secondary">Pesan Sekarang</ion-button>
+      <ion-button class="submit-btn" shape="round" color="secondary" (click)='dismiss()'>Pesan Sekarang</ion-button>
     </div>
   </div>
   </div>
