--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="body-top">
-    <ion-button shape="round" color="secondary">Pesan Sekarang!</ion-button>
+    <ion-button shape="round" color="secondary" routerLink="/tabs/tab2">Pesan Sekarang!</ion-button>
   </div>
 
   <div class="body-top">
@@ -54,7 +54,7 @@
  
     <ion-slides [options]=slideProductOpts style="padding-top: 10px;">
 
-      <ion-slide *ngFor="let item of (featuredProduct) ; let i = index" (click)='presentModal(i)'>
+      <ion-slide *ngFor="let item of (featuredProduct) ; let i = index" (click)="presentModal(i,'featured')">
         <div style="height: 200px; width: 100%; display: flex; justify-content: center;">
           <ion-card style="height: 90%; width:85%;background-color: #e8e8d8; border-radius: 20px;">
             <ion-img style="width:100%;height: 65%;" [src]="item.img"></ion-img>
