--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,1 +1,33 @@
-
+ion-button {
+    --text-decoration: none;
+    text-transform: none;
+    font-family:Candara;
+    width: 35%;
+    height: 40px;
+    border-radius: 100%;
+    font-weight: bold;
+    font-size: 15px;
+  }
+    
+  .body-top{
+    width: 100%; 
+    display: flex; 
+    justify-content: center;
+    position: absolute;
+    top: 10pc;
+  }
+  
+  .body-bottom{
+    background:white; 
+    width: 100%; 
+    height: 650px;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    padding-top: 30px;
+  }
+  
+  ion-img {
+    max-width: 100%;
+    height: auto; 
+    display: block;
+  }
